--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,16 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="clockCustomViewStyle">@style/DefaultClockCustomStyle</item>
+    </style>
+
+    <style name="DefaultClockCustomStyle">
+        <item name="hourHandColor">@color/white</item>
+        <item name="minuteHandColor">@color/white</item>
+        <item name="secondHandColor">@android:color/holo_red_light</item>
+        <item name="clockDivisionColor">@color/white</item>
+        <item name="strokeClockColor">@color/white</item>
+        <item name="numberColor">@color/white</item>
+        <item name="clockBackgroundColor">@color/teal_700</item>
     </style>
 </resources>
