--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="clockCustomViewStyle">@style/DefaultClockCustomStyle</item>
     </style>
+    
+    <style name="DefaultClockCustomStyle">
+        <item name="hourHandColor">@color/black</item>
+        <item name="minuteHandColor">@color/black</item>
+        <item name="secondHandColor">@android:color/holo_red_light</item>
+        <item name="clockDivisionColor">@color/black</item>
+        <item name="strokeClockColor">@color/black</item>
+        <item name="numberColor">@color/black</item>
+        <item name="clockBackgroundColor">@color/teal_700</item>
+    </style>
+    
 </resources>
